vehicle/tests/golden/error/other-verifier/quantifiedInt/quantifiedInt.vcl
@property
f : Bool
f = forall (x : Int) . x >= 0
